primitive types extension, methods interception